# drf-ecommerce

./: .coveragerc  .editorconfig  .gitignore  .pre-commit-config.yaml  Makefile  commands.md  pyproject.toml  requirements.txt
backend/: manage.py  pytest.ini  setup.cfg
backend/apps/product/: admin.py  fields.py  models.py  serializers.py  views.py
backend/apps/product/migrations/: 0001_initial.py  0002_alter_category_options_alter_category_table.py  0003_brand_is_active.py  0004_alter_brand_name_alter_category_name_and_more.py
backend/backend/settings/: base.py  local.py  prod.py
backend/core/: urls.py
backend/core/settings/: base.py
backend/tests/: conftest.py  factories.py
backend/tests/product/: test_endpoints.py  test_models.py
dotenv/: example.env
